dvc/dvc_minio_backend.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dvc

---

apiVersion: apps/v1
kind: Deployment
metadata:
  # This name uniquely identifies the Deployment
  name: dvc-minio-backend
  namespace: dvc
spec:
  selector:
    matchLabels:
      app: dvc-minio-backend # has to match .spec.template.metadata.labels
  strategy:
    # Specifies the strategy used to replace old Pods by new ones
    # Refer: https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#strategy
    type: Recreate
  template:
    metadata:
      labels:
        # This label is used as a selector in Service definition
        app: dvc-minio-backend
    spec:
      # Volumes used by this deployment
      volumes:
      - name: data
        # This volume is based on PVC
        persistentVolumeClaim:
          # Name of the PVC created earlier
          claimName: dvc-minio-backend-pvc
      containers:
      - name: minio
        # Volume mounts for this container
        volumeMounts:
        # Volume 'data' is mounted to path '/data'
        - name: data
          mountPath: "/data"
        # Pulls the lastest Minio image from Docker Hub
        image: minio/minio:latest
        command: ["/bin/sh"]
        args: ["-c",  "mkdir -p /data && mkdir -p /data/mlflow && /usr/bin/minio server /data"]
        ports:
        - containerPort: 9000
        # Readiness probe detects situations when MinIO server instance
        # is not ready to accept traffic. Kubernetes doesn't forward
        # traffic to the pod while readiness checks fail.
        readinessProbe:
          httpGet:
            path: /minio/health/ready
            port: 9000
          initialDelaySeconds: 120
          periodSeconds: 20
        # Liveness probe detects situations where MinIO server instance
        # is not working properly and needs restart. Kubernetes automatically
        # restarts the pods if liveness checks fail.
        livenessProbe:
          httpGet:
            path: /minio/health/live
            port: 9000
          initialDelaySeconds: 120
          periodSeconds: 20
---

apiVersion: v1
kind: Service
metadata:
  # This name uniquely identifies the service
  name: dvc-minio-backend
  namespace: dvc
spec:
  type: NodePort
  selector:
    # Looks for labels `app:minio` in the namespace and applies the spec
    app: dvc-minio-backend
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
      nodePort: 30210
