dvc/dvc_minio_ingress.yml
apiVersion: v1
kind: Service
metadata:
  # This name uniquely identifies the service
  name: dvc-minio-backend
  namespace: dvc
spec:
  selector:
    # Looks for labels `app:minio` in the namespace and applies the spec
    app: dvc-minio-backend
  ports:
    - protocol: TCP
      port: 80

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: example
  namespace: foo
spec:
  rules:
    - host: www.example.com
      http:
        paths:
          - backend:
              serviceName: exampleService
              servicePort: 80
            path: /
